# quickbib

./: .gitignore  LICENSE  README.md  about_dialog.py  app_info.py  doi2bibgui.py  helpers.py  index.html  io.github.archisman_panigrahi.QuickBib.desktop  io.github.archisman_panigrahi.QuickBib.metainfo.xml  io.github.archisman_panigrahi.quickbib.desktop  io.github.archisman_panigrahi.quickbib.metainfo.xml  main_window.py  meson.build  quickbib-web.py  quickbib.desktop  quickbib.py  quickbib.spec  quickbib_launcher.py  requirements.txt  script.js  styles.css  update-version-number-all-files.sh
.devcontainer/: devcontainer.json
.github/workflows/: flatpak.yml  macos-arm64.yml  windows-packaging.yml
assets/icon/: QuickBib.icns
debian/: changelog  control  copyright  rules  watch
flatpak/: io.github.archisman_panigrahi.QuickBib.json
quickbib/: __init__.py  __main__.py  about_dialog.py  app_info.py  helpers.py  how_to_use_dialog.py  main_window.py  quickbib.py  windows_update.py
snap/: snapcraft.yaml
tools/: png_to_ico.py
windows_packaging/: generate_icns_from_pngs.py  macos_create_app.sh  quickbib.nsi  quickbib_launcher.py  quickbib_macos_launcher.py  quickbib_macos_packager.py
